--- a/reflexion_a.tex
+++ b/reflexion_a.tex
@@ -32,7 +32,7 @@
 	\end{tabular}
 
 \textbf{Bestaetigungsvermerk des Ausbildungsbetriebes}\\
-Hier wird bestaetigt, dass der/die Studierende die PRaxisphase gemaess der Modulbeschreibung und des Praxisplanes des Studiengangs erfolgreich durchlaufen hat.\\
+Hier wird bestaetigt, dass der/die Studierende die Praxisphase gemaess der Modulbeschreibung und des Praxisplanes des Studiengangs erfolgreich durchlaufen hat.\\
 
 	\begin{center}
 		\begin{tabular}{|p{9cm} p{2.5cm} p{2.5cm}|}
